update numerical_solution.ipynb & add interpolation.ipynb

--- a/numerical_solution.ipynb
+++ b/numerical_solution.ipynb
@@ -1410,6 +1410,69 @@
    },
    "source": [
     "# 뉴턴법 (또는 뉴턴-랩슨 반복법)\n",
+    "\n",
+    "## 뉴턴법의 이해\n",
+    "두 함수 $f$가 미분 가능하다고 가정. 즉, $f$가 각 점에서 **유일한 접선**을 가진다.\n",
+    "\n",
+    "$x_0$근방에서 다음과 같은 선형함수가 주어진 함수 $f$에 가깝다.\n",
+    "$$\\ell(x) = f'(x_0)(x-x_0)+f(x_0)$$\n",
+    "\n",
+    "$f$의 근에 대한 근사로 $\\ell$의 근을 택한다.\n",
+    "\n",
+    "$$x_1 = x_0 - \\frac{f(x_0)}{f'(x_0)}$$\n",
+    "따라서 점 $x_0$에서 ㅡ시작하여 위 공식에서 새로운 점 $x_1$을 얻을 수 있다.\n",
+    "\n",
+    "이 과정을 반복함으로써 순서대로 점을 구할 수 있다.\n",
+    "\n",
+    "적절한 조건에서 이러한 점들의 수열은 $f$의 근으로 수렴한다.\n",
+    "\n",
+    "## 뉴턴법의 또다른 이해\n",
+    "$$f(x_0 + h) = 0$$\n",
+    "\n",
+    "$f$가 충분히 다루기 쉬운 함수라면 $x_0$에서 테일러 급수가 존재할 것.\n",
+    "\n",
+    "$$f(x_0)+hf'(x_0)+\\frac{h^2}{2}f''(x_0)+\\dots = 0$$\n",
+    "\n",
+    "위식에서 첫 두 항만 제외하고 모두 무시하면 $h$의 근사를 얻을 수 있다.\n",
+    "\n",
+    "$$x_{n+1}=x_n - \\frac{f(x_n)}{f'(x_n)}$$\n",
+    "\n",
+    "이제 이게 성립할까?\n",
+    "\n",
+    "$$\\lim_{n\\to \\infty}{x_n} = r$$\n",
+    "\n",
+    "$r$은 찾고자 하는 $f$의 근\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "# 할선법\n",
+    "\n",
+    "$$x_{n+1} = x_n - \\frac{f(x_n)}{f'(x_n)}$$\n",
+    "\n",
+    "$f'(x_n)$을 쉽게 계산할 수 있는 근사값으로 바꾼다.\n",
+    "도함수의 정의가 다음과 같으므로\n",
+    "$$f'(x) = \\lim_{h\\to 0}{\\frac{f(x+h)-f(x)}{h}}$$\n",
+    "\n",
+    "아주 작은 $h$에 대해 다음이 성립한다.\n",
+    "\n",
+    "$$f'(x) \\approx \\frac{f(x+h)-f(x)}{h}$$\n",
+    "\n",
+    "특히 $x = x_n$이고 $h=x_{n-1} - x_n$인 경우, 다음이 성립한다.\n",
+    "\n",
+    "$$f'(x_n) \\approx \\frac{f(x_{n-1}-f(x_n)}{x_{n-1} - x_n}$$\n",
+    "\n",
+    "이 근사를 처음 식에 대입하면 그것이 할선법이다.\n",
+    "\n",
+    "$$x_{n+1} = x_n - \\left(\\frac{x_n-x_{n-1}}{f(x_n)-f(x_{n-1}}f(x_n) \\right)$$\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
