add numerical_integration.ipynb & update interpolation, numerical_solution

--- a/numerical_solution.ipynb
+++ b/numerical_solution.ipynb
@@ -11,7 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "z%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.animation as animation\n",
@@ -1475,13 +1475,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1505,7 +1498,10 @@
   },
   "toc": {
    "base_numbering": 1,
-   "nav_menu": {},
+   "nav_menu": {
+    "height": "152.991px",
+    "width": "187.872px"
+   },
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
@@ -1540,6 +1536,13 @@
      "library": "var_list.r",
      "varRefreshCmd": "cat(var_dic_list()) "
     }
+   },
+   "position": {
+    "height": "143.795px",
+    "left": "1405.97px",
+    "right": "20px",
+    "top": "132.985px",
+    "width": "349.97px"
    },
    "types_to_exclude": [
     "module",
