some small update

--- a/interpolation.ipynb
+++ b/interpolation.ipynb
@@ -124,7 +124,7 @@
     "\n",
     "이제 이를 통해 어떻게 분할차분을 계산할 것인가에 대한 답을 만들어 낼 수 있다. 그 답은 다음과 같다.\n",
     "\n",
-    "$$ \\begin{equation*} { f[x_0,x_1,\\dots,x_k] = \\frac{f(x_k)-\\sum^{k-1}_{i=0}{f[x_0, x_1, \\dots, x_i] \\prod^{i-1}_{j=0} {(x_k-x_j)} }}{\\prod^{k-1}_{j=0}{(x_k-x_j)}}} \\end{equation*} $$\n",
+    "$$ { f[x_0,x_1,\\dots,x_k] = \\frac{f(x_k)-\\sum^{k-1}_{i=0}{f[x_0, x_1, \\dots, x_i] \\prod^{i-1}_{j=0} {(x_k-x_j)} }}{\\prod^{k-1}_{j=0}{(x_k-x_j)}}} $$\n",
     "\n",
     "\n"
    ]
