--- a/numerical_solution.ipynb
+++ b/numerical_solution.ipynb
@@ -11,7 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "z%matplotlib inline\n",
+    "%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.animation as animation\n",
