some many changes exists

--- a/manim_test.ipynb
+++ b/manim_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -40,13 +40,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Animation 0: WriteVGroup:   3%|3         | 2/60 [00:00<00:04, 13.48it/s]"
+      "                                                                               \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "File ready at D:\\WORKS\\Programming\\jupyter_notebook\\stimulation\\out\\videos\\vs_test.mp4\n",
+      "\n"
      ]
     }
    ],
@@ -55,13 +64,41 @@
     "\n",
     "class HelloWorld(Scene):\n",
     "    def construct(self):\n",
-    "        text = VGroup(\n",
-    "            *[TexText(r\"\\tiny\"+r\"청어를 구하고 있었다. 사실 이 청어는 별로 중요하지 않지만 청어 볶음을 만들 때는 매우 필요한 것이다. 필요하지 않다고 생각되는 것은 당신의 고정관념 때문이다.\", font_size=42,) for _ in range(10)],\n",
-    "        ).arrange(DOWN, aligned_edge=LEFT)\n",
-    "        text.set_color_by_gradient(RED, YELLOW, GREEN, BLUE, PURPLE)\n",
+    "        text = Text(\"Here is a text\", font=\"Consolas\", font_size=90)\n",
+    "        difference = Text(\n",
+    "            \"\"\"\n",
+    "            The most important difference between Text and TexText is that\\n\n",
+    "            you can change the font more easily, but can't use the LaTeX grammar\n",
+    "            \"\"\",\n",
+    "            font=\"Arial\", font_size=24,\n",
+    "            t2c={\"Text\": BLUE, \"TexText\": BLUE, \"LaTeX\": ORANGE}\n",
+    "        )\n",
+    "        VGroup(text, difference).arrange(DOWN, buff=1)\n",
     "        self.play(Write(text))\n",
-    "        self.wait()\n",
+    "        self.play(FadeIn(difference, UP))\n",
     "        self.wait(3)\n",
+    "\n",
+    "        fonts = Text(\n",
+    "            \"And you can also set the font according to different words\",\n",
+    "            font=\"NanumGothic\",\n",
+    "            font_size=11,\n",
+    "            t2f={\"font\": \"Consolas\", \"words\": \"Consolas\"},\n",
+    "            t2c={\"font\": BLUE, \"words\": GREEN}\n",
+    "        )\n",
+    "        slant = Text(\n",
+    "            \"And the same as slant and weight\",\n",
+    "            font=\"Consolas\",\n",
+    "            font_size=11,\n",
+    "            t2s={\"slant\": ITALIC},\n",
+    "            t2w={\"weight\": BOLD},\n",
+    "            t2c={\"slant\": ORANGE, \"weight\": RED}\n",
+    "        )\n",
+    "        VGroup(fonts, slant).arrange(DOWN, buff=0.8)\n",
+    "        self.play(FadeOut(text), FadeOut(difference, shift=DOWN))\n",
+    "        self.play(Write(fonts))\n",
+    "        self.wait()\n",
+    "        self.play(Write(slant))\n",
+    "        self.wait()\n",
     "\n",
     "HelloWorld.CONFIG[\"file_writer_config\"] = CFG_FILE_WRITER\n",
     "HelloWorld.CONFIG[\"preview\"] = False\n",
@@ -71,8 +108,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
