--- a/spline.ipynb
+++ b/spline.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-01T15:16:48.586473Z",
-     "start_time": "2021-03-01T15:16:48.582476Z"
+     "end_time": "2021-03-03T09:26:51.326575Z",
+     "start_time": "2021-03-03T09:26:50.958577Z"
     }
    },
    "outputs": [],
@@ -45,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-01T15:43:54.486807Z",
-     "start_time": "2021-03-01T15:43:54.195768Z"
+     "end_time": "2021-03-03T09:26:53.291873Z",
+     "start_time": "2021-03-03T09:26:52.851832Z"
     }
    },
    "outputs": [
@@ -141,7 +141,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-03T09:26:54.922811Z",
+     "start_time": "2021-03-03T09:26:54.916808Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def quadratic_spline(t, y, z_0=0):\n",
@@ -170,11 +175,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-02T16:21:34.701592Z",
-     "start_time": "2021-03-02T16:21:34.593862Z"
+     "end_time": "2021-03-03T09:26:56.245327Z",
+     "start_time": "2021-03-03T09:26:56.136307Z"
     }
    },
    "outputs": [
@@ -214,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    },
    "source": [
@@ -222,14 +227,163 @@
     "\n",
     "> 1. $S$의 정의역은 구간 $[a,b]$이다\n",
     "> 2. $S, S', S'', \\cdots, S^{(k-1)}은 모두 [a,b]$에서 연속이다.\n",
-    "> 3. a=t_0<t_1<\\cdots<t_n=b이고 $S$가 각 부분구간 $[t_i,t_{i+1}]$에서 최대 $k$차 다항식인 점 $t_i$들ㅇ\n",
+    "> 3. $a=t_0<t_1<\\cdots<t_n=b$이고 $S$가 각 부분구간 $[t_i,t_{i+1}]$에서 최대 $k$차 다항식인 점 $t_i$들이 존재한다.\n",
+    "\n",
+    "> **이때, 스플라인 함수의 정의에는 보간에 관한 어떤 언급도 존재하지 않는다.**\n",
     "\n",
     "# 3차 스플라인\n",
     "\n",
     "* 1차 스플라인은 스플라인의 기울기가 급격히 변해 매끄럽지 않다.\n",
     "* 2차 스플라인은 절점에서 곡률이 갑자기 변하기 때문에 매끄럽게 보이지 않는다.\n",
     "\n",
-    "따라서 이보다 높은 차수의 스플라인을 사용하게 되는데 보통 $k$차 스플라인에서 흔히 선택되는 차수는 $3$이다. 여러가지 이유가 있다."
+    "따라서 이보다 높은 차수의 스플라인을 사용하게 되는데 보통 $k$차 스플라인에서 흔히 선택되는 차수는 $3$이다. 여러가지 이유가 있다.\n",
+    "\n",
+    "절점을 $x$좌표로 하는 점들$((t_0, y_0), (t_1, y_1), \\cdots, (t_n, y_n)\\; (단, t_0\\leq t_1\\leq \\cdots \\leq t_n))$을 보간하는 3차 스플라인 $S(x)$를 다음과 같이 나타내보면 다음과 같다.\n",
+    "\n",
+    "$$\n",
+    "S(x) = \\begin{cases} S_0(x) & x\\in[t_0,t_1]\\\\S_1(x) & x\\in[t_1,t_2] \\\\ \\vdots & \\vdots \\\\ S_n-1(x) & x\\in[t_{n-1},t_n] \\end{cases}\n",
+    "$$\n",
+    "\n",
+    "이때, $S_i$는 부분구간 $[t_i,t_{i+1}]$에서 사용할 3차 다항식을 의미한다.\n",
+    "\n",
+    "이 3차 스플라인에서 조건들은 다음과 같다.\n",
+    "\n",
+    "1. **보간 조건**\n",
+    "\n",
+    "$$S(t_i)=y_i\\quad(0\\leq i\\leq n)$$\n",
+    "\n",
+    "2. **연속조건**\n",
+    "\n",
+    "$$\\lim_{x\\to t_i-}S^{(k)}(t_i)=\\lim_{x\\to t_i+}S^{(k)}(t_i)\\quad (k=0, 1, 2)$$\n",
+    "\n",
+    "하지만 이때 연속조건은 **내부 절점$(t_1,t_2,\\cdots,t_{n-1})$에서만 부여**된다.\n",
+    "\n",
+    "3. **추가 조건(2)**\n",
+    "\n",
+    "2개의 조건이 더 필요하므로 추가 조건은 보통 다음으로 선택한다.\n",
+    "\n",
+    "$$S''(t_0)=S''(t_n)=0$$\n",
+    "\n",
+    "이 조건을 바탕으로 만든 스플라인을 **자연 3차 스플라인**이라고 한다.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "이외에도 스플라인 계수에 대한 연립방정식을 완전하게 하는 다른 방법들이 있다. **주기적 3차 스플라인**과 **고정적 3차 스플라인**이다.\n",
+    "\n",
+    "**주기적 3차 스플라인**은 $S(t_0)=S(t_n),\\,S'(t_0)=S'(t_n),\\,S''(t_0)=S''(t_n)$을 만족한다.\n",
+    "\n",
+    "**고정적 3차 스플라인**은 양 끝점에서 기울기가 $S'(t_0)=d_0,\\,S'(t_n)=d_n$처럼 고정되었다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-04T21:31:27.187998Z",
+     "start_time": "2021-03-04T21:31:27.185996Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# code for cubic spline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-04T21:31:28.902129Z",
+     "start_time": "2021-03-04T21:31:28.899131Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# code for the example of cubic spline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# B 스플라인\n",
+    "\n",
+    "## $B^{0}_{i}$ 스플라인\n",
+    "**0차 $B$ 스플라인**은 다음과 같이 정의한다.\n",
+    "\n",
+    "$$B^{0}_{i}=\\begin{cases}1 && t_i\\leq x < t_{i+1} \\\\ 0 && else \\end{cases} $$\n",
+    "\n",
+    "0차 $B$ 스플라인은 구간별 상수함수이다.\n",
+    "\n",
+    "## $B^{k}_i$ 스플라인\n",
+    "$B^{0}_i$로 부터 간단한 재귀적 정의에 의해 더 높은 차수의 모든 $B$ 스플라인을 만들 수 있다.\n",
+    "\n",
+    "$$B^{k}_{i}(x)=\\frac{x-t_i}{t_{i+k}-t_i}B^{k-1}_{i}(x)+\\frac{t_{i+k+1}-x}{t_{i+k+1}-t_{i+1}}B^{k-1}_{i+1}(x)\\quad(k\\geq1)$$\n",
+    "\n",
+    "다음과 같이 정의한 함수 $B^{k}_{i}$를 **$k$차 $B$ 스플라인**이라고 한다.\n",
+    "\n",
+    "$B^{k}_{i}$ 스플라인은 위와 같은 정의에 의해 단계별로 차수가 1씩 증가한다. 따라서 $B^{1}_{i}$는 구간별 선형이고 $B^{2}_{i}$는 구간별 2차이며 $B^{k}_{i}$는 구간별로 $k$차이다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $B^{k}_i$ 스플라인 선형결합\n",
+    "B 스플라인은 모든 $k$차 스플라인의 집합의 기저로 사용된다.\n",
+    "따라서 이와 같은 선형결합은 중요하다.\n",
+    "\n",
+    "$$\\sum^{\\infty}_{i=-\\infty}{c_iB_i^k}$$\n",
+    "\n",
+    "계수 $C_i^k$가 주어졌다는 가정 하에 다음과 같은 형태의 함수를 계산하는 것이 목적이다.\n",
+    "\n",
+    "$$f(x)=\\sum^{\\infty}_{i=-\\infty}{C_i^kB_i^k(x)}$$\n",
+    "\n",
+    "하지만 위 식은 곧 재귀적 정의를 통한 계산을 통해 다음과 같이 변환되게 된다.\n",
+    "\n",
+    "$$f(x)=\\sum^{\\infty}_{i=-\\infty}{C_i^{k-1}B_i^{k-1}(x)}$$\n",
+    "\n",
+    "이 과정을 반복하면 $f(x)$는 다음과 같이 표기된다.\n",
+    "\n",
+    "$$f(x)=\\sum^{\\infty}_{i=-\\infty}{C_i^{0}B_i^{0}(x)}$$\n",
+    "\n",
+    "만약 $t_m\\leq x < t_{m+1}$이면 $f(x)=C^{0}_m$이다. 그리고 계수 $C^{j-1}_{i}$를 얻을 수 있는 식은 다음과 같다.\n",
+    "\n",
+    "$$C^{j-1}_{i}=C^{j}_{i}\\left(\\frac{x-t_i}{t_{i+j}-t_i}\\right) + C^{j}_{i-1}\\left(\\frac{t_{i+j}-x}{t_{i+j}-t_i}\\right)$$\n",
+    "\n",
+    "그렇다면 다음 간단한 문제는 다음과 같다.\n",
+    "\n",
+    "$$\\sum^{\\infty}_{i=-\\infty}{B_i^{k-1}(x)}=1\\quad(\\text{모든 $x$와 모든 $k\\geq 0$ 에 대해})$$\n",
+    "\n",
+    "$k=0$일 때, 이것이 참임은 당연하다.\n",
+    "만약 $k>0$이라면 $C^{k}_i=1$을 사용하면 위의 정$C^{k}_{i},C^{k-1}_{i},C^{k-2}_{i},\\cdots, C^{0}_{i}$ 들은 귀납적으로 모두 1과 같다.\n",
+    "\n",
+    "\n",
+    "## $B^{k}_i$ 스플라인 미분\n",
+    "\n",
+    "## $B^{k}_i$ 스플라인 적분"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $B^{k}_i$ 스플라인 보간 및 근사"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 쇤베르크 과정"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 베지어 곡선"
    ]
   },
   {
