--- a/interpolation.ipynb
+++ b/interpolation.ipynb
@@ -286,7 +286,7 @@
   }
  ],
  "metadata": {
-  "hide_input": false,
+  "hide_input": true,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
