--- a/initial_value.ipynb
+++ b/initial_value.ipynb
@@ -213,7 +213,7 @@
    "metadata": {},
    "source": [
     "# 포식자-피식자 관계\n",
-    "Lotka-Volterra 방정식은 포식자 피식자 관계를 수량화한 연립 미분 방정식이다.\n",
+    "**Lotka-Volterra 방정식**은 포식자 피식자 관계를 수량화한 연립 미분 방정식이다.\n",
     "\n",
     "이 방정식은 다음과 같다.\n",
     "\n",
@@ -274,14 +274,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "source": [],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
